// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TodoItem /> renders correctly with default props 1`] = `
<ListGroupItem
  style={
    Object {
      "marginTop": "1.5em",
    }
  }
  tag="li"
>
  <Row
    tag="div"
  >
    <Col
      className="todo_items_left"
      lg={null}
      md={null}
      middle={true}
      size="10"
      sm={null}
      tag="div"
      xl={null}
      xs={null}
    />
    <Col
      className="todo_items_right"
      lg={null}
      md={null}
      size="2"
      sm={null}
      tag="div"
      xl={null}
      xs={null}
    >
      <RippledComponent
        checked={false}
        className=""
        disabled={false}
        indeterminate={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={Object {}}
        type="checkbox"
        unbounded={true}
      />
      <Fa
        aria-label="Remove"
        border={false}
        brand={false}
        className="red-text remove_icon"
        fab={false}
        fal={false}
        far={false}
        fixed={false}
        flip=""
        icon="trash"
        inverse=""
        label="delete"
        light={false}
        list={false}
        name="delete"
        onClick={[Function]}
        pull=""
        pulse={false}
        regular={false}
        rotate=""
        size="2x"
        spin={false}
        stack=""
      />
    </Col>
  </Row>
</ListGroupItem>
`;

exports[`<TodoItem /> renders correctly with props 1`] = `
<ListGroupItem
  style={
    Object {
      "marginTop": "1.5em",
    }
  }
  tag="li"
>
  <Row
    tag="div"
  >
    <Col
      className="todo_items_left"
      lg={null}
      md={null}
      middle={true}
      size="10"
      sm={null}
      tag="div"
      xl={null}
      xs={null}
    >
      Buy Oranges and Apples
    </Col>
    <Col
      className="todo_items_right"
      lg={null}
      md={null}
      size="2"
      sm={null}
      tag="div"
      xl={null}
      xs={null}
    >
      <RippledComponent
        checked={false}
        className=""
        disabled={false}
        indeterminate={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={Object {}}
        type="checkbox"
        unbounded={true}
      />
      <Fa
        aria-label="Remove"
        border={false}
        brand={false}
        className="red-text remove_icon"
        fab={false}
        fal={false}
        far={false}
        fixed={false}
        flip=""
        icon="trash"
        inverse=""
        label="delete"
        light={false}
        list={false}
        name="delete"
        onClick={[Function]}
        pull=""
        pulse={false}
        regular={false}
        rotate=""
        size="2x"
        spin={false}
        stack=""
      />
    </Col>
  </Row>
</ListGroupItem>
`;
